spider: SAST (SonarLint) Fixes
- Use isEmpty vs length checks.
- Use instanceof assignment where applicable.
- Use text blocks vs concatenation where applicable.
- Use computeIfAbsent vs get/put where applicable.
- Use charset constants from JRE vs string literals.
- Use constants from base classes vs extended classes.
- Remove useless conditions/assignments.

Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>